Fix min heights that were causing excess spacing

--- a/styles/main.less
+++ b/styles/main.less
@@ -39,7 +39,6 @@ html .themed {
   
   #main-content {
   	text-align:center;
-  	padding-bottom: 200px;
   }
 
   .pop-header-bg {
@@ -69,7 +68,7 @@ html .themed {
   	z-index:2;
   	background: url("@{base-url}/images/bg-light-repeat.png") repeat white;
   	width:940px;
-  	min-height:610px;
+  	min-height:410px;
     height:auto !important;
     height:610px;
   	margin:0 auto 40px auto;
@@ -94,7 +93,7 @@ html .themed {
   	position: relative;
   	z-index:2;
   	width:940px;
-  	min-height:500px;
+  	min-height:100px;
   	margin:0 auto;
   	padding:10px 28px;
   }
@@ -1019,16 +1018,16 @@ html .themed {
 }
 
 
-@media screen and (max-width: 960px)  {
-  #populr > .mobile-reset();
+// @media screen and (max-width: 960px)  {
+//   #populr > .mobile-reset();
 
-  .title-area, .lightregion, .darkregion { width:auto !important; padding:10px !important; }
-  .divider-ornate { width: 100% !important; }
-  h1#pop-title { font-size: 40px !important; padding:0; margin:0; }
-  h2.asset-title { font-size: 32px !important; padding:0; margin: 19px 0 14px 0 !important; }
-  .image-inner { margin:0 !important; }
-  .description { font-size: 15px !important;padding: 0 !important;margin: 0 !important;
-    .image-text .asset-title { margin: 14px 0 5px 0 !important; }
-  }
+//   .title-area, .lightregion, .darkregion { width:auto !important; padding:10px !important; }
+//   .divider-ornate { width: 100% !important; }
+//   h1#pop-title { font-size: 40px !important; padding:0; margin:0; }
+//   h2.asset-title { font-size: 32px !important; padding:0; margin: 19px 0 14px 0 !important; }
+//   .image-inner { margin:0 !important; }
+//   .description { font-size: 15px !important;padding: 0 !important;margin: 0 !important;
+//     .image-text .asset-title { margin: 14px 0 5px 0 !important; }
+//   }
 
-}
+// }
